--- a/friends.html
+++ b/friends.html
@@ -87,18 +87,18 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
-            <span class="nav__notification__number">1</span>
+          <a class="nav__link" href="chats.html">
+            <span class="nav__notification__number badge">1</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="find.html">
             <i class="fas fa-search fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#">
+          <a class="nav__link" href="more.html">
             <div class="nav__notification__circle"></div>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
