--- a/friends.html
+++ b/friends.html
@@ -72,8 +72,7 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
+            <div><span>2</span><i class="fas fa-chevron-right fa-xs"></i></div>
           </div>
         </div>
       </div>
