--- a/friends.html
+++ b/friends.html
@@ -28,7 +28,9 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span>
+          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
+        </span>
       </div>
     </header>
 
@@ -87,7 +89,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification__number badge">1</span>
+            <span class="badge-number badge">1</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
@@ -98,7 +100,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <div class="nav__notification__circle"></div>
+            <div class="badge-circle"></div>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
