--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chats - Kokoa Clone</title>
+    <title>settings - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,38 +23,7 @@
       </div>
     </div>
 
-    <header class="screen-header screen-header-chats">
-      <h1 class="screen-header__title">Chats</h1>
-      <div class="screen-header__icons">
-        <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="far fa-comment-dots fa-lg"></i></span>
-        <span><i class="fas fa-music fa-lg"></i></span>
-        <span>
-          <a href="settings.html"><i class="fas fa-cog fa-lg"></i></a>
-        </span>
-      </div>
-    </header>
-
-    <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            src="https://t1.kakaocdn.net/kakaocorp/kakaocorp/admin/5f9c58c2017800001.png"
-            class="user-component__avatar user-component__avatar--xl"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">KaKaoTalk</h4>
-            <h6 class="user-component__subtitle">
-              Please check My KaKao Account Info
-            </h6>
-          </div>
-        </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
-    </main>
+    <main class="main-screen"></main>
 
     <nav class="nav">
       <ul class="nav__list">
@@ -66,7 +35,7 @@
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
             <span class="badge-number badge">1</span>
-            <i class="fas fa-comment fa-2x"></i>
+            <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
         <li class="nav__btn">
